# thedata.io-backend

./: .gitignore  .yamllint.yml  API_REFACTORING_PLAN.md  Dockerfile.dagster  Dockerfile.test  README.md  SERVICES.md  alembic.ini  check_services.py  dagster.yaml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  function_calls>  generate_password.py  pyproject.toml  requirements.txt  run_tests.sh  status-report.md  test_healthchecks.py  test_password.py
app/: config.py  log_config.yml  main.py  pyproject.toml  setup.py
app/api/: Dockerfile  alembic.ini  config.py  docker-entrypoint.sh  log_config.yml  main.py  requirements.txt
app/api/config/: system_config.json
app/api/core/: __init__.py  config.py  instances.py
app/api/migrations/: 001_create_users.sql  002_create_clickhouse_tables.sql  003_create_customer_tables.sql  env.py  run_migrations.py  schema_tracking.sql
app/api/models/: __init__.py  admin.py  base.py  base_models.py  data.py  data_source.py  organization.py  pipeline.py  timeseries.py  user.py
app/api/routers/: __init__.py  admin.py  analytics.py  auth.py  data_sources.py  health.py  ingest.py  ingestion.py  organizations.py  pipelines.py  transform.py  users.py
app/api/routes/: data.py
app/api/services/: admin_service.py  clickhouse.py  data_flow.py  data_source_service.py  materialize.py  (+6 more)
app/dagster/: __init__.py  repository.py
app/frontend/: README.md  package-lock.json  package.json  tsconfig.json
app/tests/: conftest.py  test_ingestion.py  test_redis.py  test_security.py  test_system.py  test_transform_api.py
(+945 files in other folders)
